--- a/notebooks/algos.ipynb
+++ b/notebooks/algos.ipynb
@@ -46,7 +46,7 @@
     "def by_sorting(df):\n",
     "    s = df.A.order()\n",
     "    return DataFrame({'min' : s.head(5).values, \n",
-    "                      'max' : s.tail(5).values })\n",
+    "                      'max' : s.tail(5).values[::-1]})\n",
     "\n",
     "def by_n(df):\n",
     "    return DataFrame({'min' : df.A.nsmallest(5).values, \n",
